--- a/backend/.env.test
+++ b/backend/.env.test
@@ -1,3 +1,3 @@
 # define your env variables for the test env here
-KERNEL_CLASS='App\Kernel'
+KERNEL_CLASS='Lk2\Core\Infrastructure\Kernel'
 APP_SECRET='$ecretf0rt3st'
