--- a/backend/phpstan.dist.neon
+++ b/backend/phpstan.dist.neon
@@ -7,6 +7,8 @@ parameters:
         - src/
         - tests/
     tmpDir: var/cache/phpstan
+    excludePaths:
+        - 'tests/CodeSniffer/Sniffs/Commenting/FunctionCommentSniff.php'
 services:
    -
        class: Lk2\Tests\Architecture\CleanStructureTest
