--- a/backend/composer.json
+++ b/backend/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.4",
         "ext-zend-opcache": "*",
         "nelmio/api-doc-bundle": "^5.5",
+        "symfony/asset": "^7.3.0",
         "symfony/console": "^7.3.2",
         "symfony/dependency-injection": "~7.3.2",
         "symfony/dotenv": "^7.3.2",
@@ -16,7 +17,9 @@
         "symfony/http-kernel": "^7.3.2",
         "symfony/routing": "^7.3.2",
         "symfony/runtime": "^7.3.1",
-        "symfony/yaml": "^7.3.2"
+        "symfony/twig-bundle": "^7.3.2",
+        "symfony/yaml": "^7.3.2",
+        "zircote/swagger-php": "^5.3.1"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.47",
@@ -106,7 +109,8 @@
             "composer outdated --strict --major-only --sort-by-age",
             "bin/console cache:clear",
             "bin/console lint:container",
-            "bin/console nelmio:apidoc:dump > /dev/null",
+            "bin/console nelmio:apidoc:dump --area=default > /dev/null",
+            "bin/console nelmio:apidoc:dump --area=internal > /dev/null",
             "composer phpunit"
         ]
     }
