--- a/backend/config/packages/nelmio_api_doc.yaml
+++ b/backend/config/packages/nelmio_api_doc.yaml
@@ -4,6 +4,10 @@ nelmio_api_doc:
             title: My App
             description: This is an awesome app!
             version: 1.0.0
-    areas: # to filter documented areas
-        path_patterns:
-            - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
+    areas:
+#        path_patterns:
+#            - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
+        default:
+          path_patterns: [ ^/api ]
+        internal:
+          with_attribute: true
