--- a/backend/composer.json
+++ b/backend/composer.json
@@ -8,6 +8,7 @@
         "ext-zend-opcache": "*",
         "nelmio/api-doc-bundle": "^5.5",
         "symfony/asset": "^7.3.0",
+        "symfony/config": "^7.3.2",
         "symfony/console": "^7.3.2",
         "symfony/dependency-injection": "~7.3.2",
         "symfony/dotenv": "^7.3.2",
@@ -15,11 +16,15 @@
         "symfony/framework-bundle": "^7.3.2",
         "symfony/http-foundation": "~7.3.2",
         "symfony/http-kernel": "^7.3.2",
+        "symfony/monolog-bundle": "^3.10",
+        "symfony/property-access": "^7.3.2",
+        "symfony/property-info": "^7.3.1",
         "symfony/routing": "^7.3.2",
         "symfony/runtime": "^7.3.1",
+        "symfony/serializer": "^7.3.2",
         "symfony/twig-bundle": "^7.3.2",
         "symfony/yaml": "^7.3.2",
-        "zircote/swagger-php": "^5.3.1"
+        "zircote/swagger-php": "^5.3.2"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.47",
@@ -51,12 +56,12 @@
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "Lk2\\": "src/"
+            "CleanStructure\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Lk2\\Tests\\": "tests/"
+            "CleanStructure\\Tests\\": "tests/"
         }
     },
     "config": {
