--- a/backend/composer.json
+++ b/backend/composer.json
@@ -6,15 +6,19 @@
     "require": {
         "php": ">=8.4",
         "ext-zend-opcache": "*",
+        "doctrine/dbal": "^3.10.1",
+        "doctrine/doctrine-bundle": "^2.15.1",
+        "doctrine/doctrine-migrations-bundle": "^3.4.2",
+        "doctrine/orm": "^3.5.2",
         "nelmio/api-doc-bundle": "^5.5",
         "symfony/asset": "^7.3.0",
         "symfony/config": "^7.3.2",
         "symfony/console": "^7.3.2",
-        "symfony/dependency-injection": "~7.3.2",
+        "symfony/dependency-injection": "^7.3.2",
         "symfony/dotenv": "^7.3.2",
         "symfony/flex": "^2.8.2",
         "symfony/framework-bundle": "^7.3.2",
-        "symfony/http-foundation": "~7.3.2",
+        "symfony/http-foundation": "^7.3.2",
         "symfony/http-kernel": "^7.3.2",
         "symfony/monolog-bundle": "^3.10",
         "symfony/property-access": "^7.3.2",
@@ -37,7 +41,7 @@
         "roave/security-advisories": "dev-latest",
         "shipmonk/composer-dependency-analyser": "^1.8.3",
         "squizlabs/php_codesniffer": "^3.13.2",
-        "symfony/browser-kit": "~7.3.2"
+        "symfony/browser-kit": "^7.3.2"
     },
     "replace": {
         "symfony/polyfill-ctype": "*",
@@ -111,7 +115,7 @@
             "composer rector",
             "composer phpstan",
             "vendor/bin/composer-dependency-analyser",
-            "composer outdated --strict --major-only --sort-by-age",
+            "composer outdated --strict --major-only --sort-by-age --ignore=doctrine/dbal",
             "bin/console cache:clear",
             "bin/console lint:container",
             "bin/console nelmio:apidoc:dump --area=default > /dev/null",
