--- a/backend/config/packages/nelmio_api_doc.yaml
+++ b/backend/config/packages/nelmio_api_doc.yaml
@@ -1,8 +1,8 @@
 nelmio_api_doc:
     documentation:
         info:
-            title: My App
-            description: This is an awesome app!
+            title: Clean Structure
+            description: Example of using the Clean Structure when creating API by symfony
             version: 1.0.0
     areas:
 #        path_patterns:
