--- a/backend/composer.json
+++ b/backend/composer.json
@@ -41,7 +41,8 @@
         "roave/security-advisories": "dev-latest",
         "shipmonk/composer-dependency-analyser": "^1.8.3",
         "squizlabs/php_codesniffer": "^3.13.2",
-        "symfony/browser-kit": "^7.3.2"
+        "symfony/browser-kit": "^7.3.2",
+        "symfony/web-profiler-bundle": "^7.3.2"
     },
     "replace": {
         "symfony/polyfill-ctype": "*",
@@ -118,6 +119,7 @@
             "composer outdated --strict --major-only --sort-by-age --ignore=doctrine/dbal",
             "php bin/console cache:clear",
             "php bin/console lint:container",
+            "php bin/console lint:twig --format=github",
             "php bin/console nelmio:apidoc:dump --area=default > /dev/null",
             "php bin/console nelmio:apidoc:dump --area=internal > /dev/null",
             "composer phpunit"
