--- a/backend/composer.json
+++ b/backend/composer.json
@@ -42,6 +42,7 @@
         "shipmonk/composer-dependency-analyser": "^1.8.3",
         "squizlabs/php_codesniffer": "^3.13.2",
         "symfony/browser-kit": "^7.3.2",
+        "symfony/css-selector": "^7.3",
         "symfony/web-profiler-bundle": "^7.3.2"
     },
     "replace": {
