Upgrade doctrine/dbal

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "clean-structure/clean-structure-symfony-example-api",
-    "description": "Clean Structure: Example API by Symfony",
+    "name": "clean-structure/clean-structure-symfony-example",
+    "description": "Clean Structure: Example base on Symfony",
     "license": "proprietary",
     "type": "project",
     "require": {
         "php": ">=8.4",
         "ext-zend-opcache": "*",
-        "doctrine/dbal": "^3.10.1",
+        "doctrine/dbal": "^4.3.2",
         "doctrine/doctrine-bundle": "^2.15.1",
         "doctrine/doctrine-migrations-bundle": "^3.4.2",
         "doctrine/orm": "^3.5.2",
@@ -117,7 +117,7 @@
             "composer rector",
             "composer phpstan",
             "vendor/bin/composer-dependency-analyser",
-            "composer outdated --strict --major-only --sort-by-age --ignore=doctrine/dbal",
+            "composer outdated --strict --major-only --sort-by-age",
             "php bin/console cache:clear",
             "php bin/console lint:container",
             "php bin/console lint:twig --format=github",
