--- a/backend/composer.json
+++ b/backend/composer.json
@@ -19,6 +19,7 @@
         "symfony/dependency-injection": "^7.3.2",
         "symfony/dotenv": "^7.3.2",
         "symfony/event-dispatcher": "^7.3",
+        "symfony/filesystem": "^7.3.2",
         "symfony/flex": "^2.8.2",
         "symfony/framework-bundle": "^7.3.2",
         "symfony/http-foundation": "^7.3.2",
